--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -r requirements.pip"
+install: "pip install -r requirements.txt"
 # command to run tests
 script: coverage run --source="." account_chooser_demo/manage.py test
 
